--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --primary: #5e04d7;
   --secondary: #ffffff;
+  --tertiary: #fbff00;
 
   --planta: #9bcc50;
   --fuego: #ff9c54;
@@ -32,5 +33,9 @@
 body {
 	background-color: var(--secondary);
   color: var(--primary);
+}
+
+ul {
+  list-style: none;
 }
 
