--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,50 +1,95 @@
-.pokemon-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(175px, 1fr));
-    gap: 15px;
-    padding: 10px;
-    max-width: 1200px;
-    margin: 0 auto;
+
+
+
+
+.normal {
+    background-color: var(--type-normal);
+    color: var(--clr-black);
 }
 
-.pokemon-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 20px;
-    background-color: var(--primary);
-    padding: 5px 0;
-    box-shadow: 4px 4px 1px #00000020;
-    transition: 0.3s;
-
-    &:hover {
-        transform: scale(1.01);
-        box-shadow: 0 0 15px 0 #21212170;
-    }
+.fire {
+    background-color: var(--type-fire);
+    color: var(--clr-black);
 }
 
-.pokemon-card p {
-    color: var(--secondary);
-    text-transform: capitalize;
+.water {
+    background-color: var(--type-water);
+    color: var(--clr-white);
 }
 
-.pokemon-image {
-width: 150px;
-height: 150px;
-margin: 5px 0;
+.grass {
+    background-color: var(--type-grass);
+    color: var(--clr-black);
 }
 
-.pokemon-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgba(128, 128, 128, 0.479);
-    color: var(--secondary);
-    font-weight: bold;
-    padding: 4px 8px;
-    border-radius: 10px;
-    width: auto;
-    gap: 15px;
+.electric {
+    background-color: var(--type-electric);
+    color: var(--clr-black);
+}
+
+.ice {
+    background-color: var(--type-ice);
+    color: var(--clr-black);
+}
+
+.fighting {
+    background-color: var(--type-fighting);
+    color: var(--clr-white);
+}
+
+.poison {
+    background-color: var(--type-poison);
+    color: var(--clr-white);
+}
+
+.ground {
+    background-color: var(--type-ground);
+    color: var(--clr-black);
+}
+
+.flying {
+    background-color: var(--type-flying);
+    color: var(--clr-black);
+}
+
+.psychic {
+    background-color: var(--type-psychic);
+    color: var(--clr-black);
+}
+
+.bug {
+    background-color: var(--type-bug);
+    color: var(--clr-black);
+}
+
+.rock {
+    background-color: var(--type-rock);
+    color: var(--clr-black);
+}
+
+.ghost {
+    background-color: var(--type-ghost);
+    color: var(--clr-white);
+}
+
+.dark {
+    background-color: var(--type-dark);
+    color: var(--clr-white);
+}
+
+.dragon {
+    background-color: var(--type-dragon);
+    color: var(--clr-white);
+}
+
+.steel {
+    background-color: var(--type-steel);
+    color: var(--clr-black);
+}
+
+.fairy {
+    background-color: var(--type-fairy);
+    color: var(--clr-black);
 }
 
 .more-btn {
