--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 80px;
     gap: 5px;
     padding: 5px 0;
 }
