--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   --primary: #5e04d7;
   --secondary: #ffffff;
-  --tertiary: #fbff00;
+  --tertiary: #0c0c0c;
 
   --planta: #9bcc50;
   --fuego: #ff9c54;
