--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -10,19 +10,11 @@ main {
     gap: 1rem;
 }
 
-
-
-@media (max-width: 480px) {
-    .pokemon-todos {
-        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    }
-}
-
 .pokemon {
     border-radius: 1rem;
     color: var(--tertiary);
     background-color: var(--secondary);
-    box-shadow: 0 0 3rem -1rem rgba(0, 0, 0, 25);
+    box-shadow: 0 0 1.7rem -1rem rgba(0, 0, 0, 25);
     padding-block: 1rem;
     text-transform: capitalize;
     position: relative;
@@ -109,24 +101,39 @@ padding: .25rem .5rem;
 border-radius: 100vmax;
 }
 
+.morebtn {
+    padding: 14px;
+    display: flex;
+    justify-content: center;
+}
+
 .more-btn {
     background-color: var(--primary);
     color: var(--secondary);
     border-radius: 10px;
     padding: 12px;
-    margin: 2% 0% 2% 46.7%;
     border: none;
     box-shadow: 4px 4px 16px #00000020;
     display: flex;
     justify-content: center;
     cursor: pointer;
-    align-items: center;
-    text-align: center;
     gap: 5px;
     transition: 0.5s;
     &:hover {
         transform: scale(1.08);
         opacity: 0.9;
+    }
+}
+
+@media (max-width: 480px) {
+    .pokemon-todos {
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    }
+    .pokemon-nombre {
+        font-size: 1.1rem;
+    }
+    .pokemon-stats {
+        font-size: .75rem;
     }
 }
 
