--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -10,11 +10,11 @@ main {
     gap: 1rem;
 }
 
-.pokemon {
+.pokemons {
     border-radius: 1rem;
     color: var(--tertiary);
     background-color: var(--secondary);
-    box-shadow: 0 0 1.7rem -1rem rgba(0, 0, 0, 25);
+    box-shadow: 0 0 1rem -1rem rgba(0, 0, 0, 25);
     padding-block: 1rem;
     text-transform: capitalize;
     position: relative;
@@ -87,6 +87,7 @@ main {
 #tipos {
     padding: .25rem .5rem;
     border-radius: 100vmax;
+    text-transform: uppercase;
 }
 
 .pokemon-stats {
