--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -31,7 +31,8 @@ main {
     font-weight: 800;
     color: gray;
     opacity: 15%;
-    z-index: -1;   
+    z-index: -1;
+    font-family: 'Roboto', sans-serif;  
 }
 
 .pokemon-imagen {
@@ -69,6 +70,7 @@ main {
     border-radius: 100vmax;
     font-size: .75rem;
     font-weight: 500;
+    font-family: 'Roboto', sans-serif;
 }
 
 .pokemon-nombre {
@@ -94,6 +96,7 @@ main {
     display: flex;
     gap: 1rem;
     font-size: .85rem;
+    font-family: 'Roboto', sans-serif;
 }
 
 .stat {
@@ -108,22 +111,13 @@ border-radius: 100vmax;
     justify-content: center;
 }
 
-.more-btn {
-    background-color: var(--primary);
-    color: var(--secondary);
-    border-radius: 10px;
+.endpokemon {
+    color: var(--primary);
     padding: 12px;
-    border: none;
-    box-shadow: 4px 4px 16px #00000020;
     display: flex;
     justify-content: center;
-    cursor: pointer;
     gap: 5px;
-    transition: 0.5s;
-    &:hover {
-        transform: scale(1.08);
-        opacity: 0.9;
-    }
+    margin: 2% 0;
 }
 
 @media (max-width: 480px) {
