--- a/src/components/Species/Species.css
+++ b/src/components/Species/Species.css
@@ -1,3 +1,7 @@
+.nav {
+  margin-top: 120px;
+}
+
 .nav-list {
   display: flex;
   justify-content: space-around;
@@ -5,7 +9,6 @@
   gap: 0.5rem;
   align-items: center;
   text-align: center;
-  margin: 0.5% 12%;
   
 }
 
