--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
   --primary: #5e04d7;
   --secondary: #ffffff;
   --tertiary: #0c0c0c;
+  --quaternary: rgba(172, 172, 172, 0.363);
+  --quinary: #26e;
 
   --planta: #9bcc50;
   --fuego: #ff9c54;
