--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -8,6 +8,7 @@
     place-items: center;
     transition: all 0.2s;
     z-index: 1;
+    color: var(--tertiary);
   }
   
   .modal-body {
@@ -18,6 +19,8 @@
     position: absolute;
     padding: 1rem;
     display: flex;
+    text-align: center;
+    margin-top: 5%;
   }
   
   .imagen-container {
@@ -31,8 +34,8 @@
   }
   
   .tag {
-    background-color: #26e;
-    color: #f2f2f2;
+    background-color: var(--quinary);
+    color: var(--secondary);
     padding: 4px 6px;
     margin-right: 5px;
     border-radius: 5px;
@@ -60,7 +63,7 @@
     background-color: var(--card);
     border-radius: 10px;
     padding: 5px;
-    box-shadow: 4px 4px 4px #21212120;
+    box-shadow: 4px 4px 4px #21212149;
   }
   
   .stats {
@@ -74,13 +77,14 @@
     align-items: center;
     flex-direction: column;
     text-transform: capitalize;
+    background-color: var(--quaternary);
   }
   
   .puntos {
-    border: 2px solid #000;
+    border: 2px solid var(--quinary);
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 32px;
     display: grid;
     place-items: center;
   }
@@ -101,5 +105,6 @@
       display: block;
       padding-left: .2rem;
       min-width: 300px;
+      
     }
   }
