--- a/src/components/Species/Species.css
+++ b/src/components/Species/Species.css
@@ -115,6 +115,15 @@
     color: var(--secondary);
   }
 
+  .scroll-button {
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+    width: 50px;
+    height: 50px;
+    z-index: 2;
+  }
+
   @media (max-width: 650px) {
     .nav {
       padding: 0 1rem;;  
