--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --tertiary: #0c0c0c;
   --quaternary: rgba(172, 172, 172, 0.363);
   --quinary: #26e;
+  --sextiary: #fdfdfd;
 
   --planta: #9bcc50;
   --fuego: #ff9c54;
@@ -33,11 +34,18 @@
 }
 
 body {
-	background-color: #e8e8e852;
-  color: var(--primary);
+	background-color: var(--quaternary)
 }
 
 ul {
   list-style: none;
 }
 
+
+[data-tema="oscuro"] {
+  --primary: #ffffff;
+  --secondary: #450094;
+  --tertiary: #ffffff;
+  --quaternary: #5e04d7;
+  --quinary: rgb(201, 201, 201);
+}
