--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -118,7 +118,10 @@ border-radius: 100vmax;
     display: flex;
     justify-content: center;
     gap: 5px;
-    margin: 2% 0;
+    margin-top: 2%;
+    margin-left: 36%;
+    height: 120px;
+    width: auto;
 }
 
 
@@ -129,9 +132,25 @@ border-radius: 100vmax;
     margin-left: 44.5%;
 }
 
+@media (max-width: 800px) {
+    .endpokemon {
+        margin-left: 19.5%;
+    }
+}
+
+@media (max-width: 700px) {
+    .endpokemon {
+        margin-left: 19%;
+    }
+}
+
 @media (max-width: 500px) {
     .spinner {
         margin-left: 34%;
+    }
+    .endpokemon {
+        height: 100px;
+        width: auto;
     }
 }
 
@@ -146,5 +165,13 @@ border-radius: 100vmax;
         font-size: .75rem;
     }
 
+}
+
+@media (max-width: 400px) {
+    .endpokemon {
+        margin-left: 12%;
+        height: 85px;
+        width: auto;
+    }
 }
 
