--- a/src/components/Scroll/Scroll.css
+++ b/src/components/Scroll/Scroll.css
@@ -10,6 +10,7 @@
   align-items: center;
   text-align: center;
   gap: 6px;
+  margin-bottom: 5%;
 }
 
 .nav-list button {
@@ -117,10 +118,10 @@
 
   .scroll-button {
     position: fixed;
-    bottom: 5px;
-    right: 5px;
+    bottom: 7px;
+    right: 9px;
     width: 50px;
-    height: 50px;
+    height: 75px;
     z-index: 2;
   }
 
