--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   --secondary: #ffffff;
   --tertiary: #0c0c0c;
   --quaternary: rgba(172, 172, 172, 0.363);
-  --quinary: #26e;
+  --quinary: #5e04d7;
   --sextiary: #fdfdfd;
 
   --planta: #9bcc50;
